--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,17 +1,13 @@
 @charset "utf-8";
 
-@font-face {
-    font-family: 'CustomFont';
-    src: url('fonts/poppins/Poppins-Black.ttf') format('poppins');
-    font-weight: normal;
-    font-style: normal;
-}
+@font-face { font-family: Poppins; src: url('Poppins-Regular.ttf'); } /* Doesn't work */
 
 body {
     overflow-x: hidden;
     margin: 0;
     padding: 0;
     font-family: Poppins;
+    background-color: #303235;
 }
 
 header {
@@ -91,4 +87,67 @@ a.btn, .btn {
     text-decoration: none;
     border-width: 1px;
     border-style: solid;
+}
+
+.header-menu {
+    margin-right: 75px;
+    float: right;
+}
+
+ul {
+    list-style: disc;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding-left: 0px;
+    list-style-position: inside;
+}
+
+li {
+    display: list-item;
+}
+
+.header-menu ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    height: 80px;
+    display: flex;
+    align-items: center;
+}
+
+.header-menu ul li {
+    margin-left: 40px;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+}
+
+.header-menu ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 45%;
+    height: 100%;
+}
+
+.background-filter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-color: aquamarine
+}
+
+.background-img {
+    filter: grayscale(100%);
+    mix-blend-mode: luminosity;
 }
