--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -71,7 +71,6 @@ div {
     margin-top: 8px;
     margin-right: 8px;
     border-color: #fff;
-    border-radius: 100px;
 }
 
 a.btn, .btn {
@@ -90,6 +89,7 @@ a.btn, .btn {
     text-decoration: none;
     border-width: 1px;
     border-style: solid;
+    border-radius: 100px;
 }
 
 .header-menu {
@@ -163,6 +163,7 @@ li {
     padding-top: 70px;
     padding-bottom: 70px;
     border-bottom: 1px solid #585d65;
+    z-index: 12;
 }
 
 .section.start{
@@ -197,9 +198,9 @@ li {
 }
 
 .section.start .h-title {
-    margin: 250px 0 0 32.5vw;
+    margin: 310px 0 0 35vw;
     padding: 50px;
-    font-size: 4.2vw;
+    font-size: 56px;
     line-height: 1.2;
     font-weight: 800;
     color: #fff;
@@ -223,8 +224,9 @@ h1 {
 }
 
 .section.start .content-start {
-    padding-left: 8%;
-    max-width: 500px;;
+    padding-left: 54%;
+    padding-top: 0.5%;
+    max-width: 1500px;
 }
 
 .section.start .content-start .h-subtitles {
@@ -232,21 +234,32 @@ h1 {
     margin: 0px 0px 30px;
 }
 
-.h-subtitle, .animation-subtitle, .animation-cursor {
+.h-subtitle, .animation-subtitle, .typed-cursor {
     display: inline-block;
-    font-size: 14px;
+    font-size: 18px;
     line-height: 1.2;
     color: aqua;
     font-weight: 600;
     text-transform: uppercase;
 }
 
-.animation-cursor {
+.typed-cursor {
     margin-left: 3px;
+    opacity: 1;
+    animation: blink 0.7s infinite;
 }
 
-p {
+.content-start .h-text {
+    color: #fff;
     font-size: 14px;
-    padding: 0px;
-    margin: 30px 0px;
+}
+
+.section.start .btn {
+    top: 50px;
+    margin-right: 15px;
+}
+
+.section .content {
+    position: relative;
+    max-width: 720px;
 }
